fix: fixing uses this output of task ':jar' without declaring an explicit or implicit...
    Reason: Task ':generateMetadataFileForMavenJavaPublication' uses this output of task ':jar' without declaring an explicit or implicit dependency. This can lead to incorrect results being produced, depending on what order the tasks are executed.

    Possible solutions:
      1. Declare task ':jar' as an input of ':generateMetadataFileForMavenJavaPublication'.
      2. Declare an explicit dependency on ':jar' from ':generateMetadataFileForMavenJavaPublication' using Task#dependsOn.
      3. Declare an explicit dependency on ':jar' from ':generateMetadataFileForMavenJavaPublication' using Task#mustRunAfter.

--- a/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
+++ b/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
@@ -308,15 +308,13 @@ task release(type: GradleBuild) {
 	tasks = []
 	if (getEffectiveConfigConventionalelease().setVersionConventional) {
 		tasks += [
+			'clean',
 			'gitChangelogSemanticVersion',
 			'commitNewVersionTask',
 		]
 	}
-	tasks += [
-		'clean',
-		'build',
-		'publishToMavenLocal',
-	]
+
+	tasks += ['publishToMavenLocal',]
 
 	if (getEffectiveConfigConventionalelease().repoType == "GRADLE"
 			&& getEffectiveConfigConventionalelease().publishGradlePluginToGradlePortal) {
