chore(deps): git-changelog-gradle-plugin 3.0.0

--- a/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
+++ b/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
@@ -70,11 +70,11 @@ if (getEffectiveConfigConventionalelease().updateChangelog
 		|| getEffectiveConfigConventionalelease().setVersionConventional) {
 	project.plugins.apply "se.bjurr.gitchangelog.git-changelog-gradle-plugin"
 	gitChangelogSemanticVersion {
-		suffixSnapshotIfNotTagged = false
+		suffixSnapshotIfNotTagged.set(false)
 	}
 	gitChangelog {
-		ignoreCommitsIfMessageMatches = getEffectiveConfigConventionalelease().ignoreCommitsIfMessageMatches
-		prependToFile = getEffectiveConfigConventionalelease().prependChangelogToFile
+		ignoreCommitsIfMessageMatches.set(getEffectiveConfigConventionalelease().ignoreCommitsIfMessageMatches)
+		prependToFile.set(getEffectiveConfigConventionalelease().prependChangelogToFile)
 	}
 }
 
