--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 #
-#Wed Oct 16 22:24:31 CEST 2024
+#Sat Nov 09 13:56:43 CET 2024
 adjustExistingGradlePluginPlugins=true
 description=Release Java or Gradle Plugin projects with conventional versioning.
 group=se.bjurr.gradle
 publishGradlePluginToGradlePortal=false
 repoType=GRADLE
-version=0.8.0
+version=0.8.1
