--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@
 plugins {
 	id "groovy-gradle-plugin"
 	id "io.github.gradle-nexus.publish-plugin" version "2.0.0" apply false
-	id "se.bjurr.gitchangelog.git-changelog-gradle-plugin" version "3.0.0" apply false
+	id "se.bjurr.gitchangelog.git-changelog-gradle-plugin" version "3.+" apply false
 	id "com.diffplug.spotless" version "6.25.0"
 }
 
@@ -15,7 +15,7 @@ dependencies {
 	implementation "com.gradleup.shadow:shadow-gradle-plugin:8.3.2"
 	implementation "io.github.gradle-nexus:publish-plugin:2.0.0"
 	implementation "com.gradle.publish:plugin-publish-plugin:1.3.0"
-	implementation "se.bjurr.gitchangelog:git-changelog-gradle-plugin:3.0.0"
+	implementation "se.bjurr.gitchangelog:git-changelog-gradle-plugin:3.+"
 }
 
 repositories {
