feat: ossrh-staging-api

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 #
-#Sat Nov 09 14:48:05 CET 2024
+#Sat May 10 15:14:57 CEST 2025
 adjustExistingGradlePluginPlugins=true
 description=Release Java or Gradle Plugin projects with conventional versioning.
 group=se.bjurr.gradle
 publishGradlePluginToGradlePortal=false
 repoType=GRADLE
-version=0.8.3
+version=0.8.4
