--- a/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
+++ b/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
@@ -21,6 +21,7 @@ def getGivenConfigConventionalelease() {
 		mavenRepositoryUrl: project.getProperties().getOrDefault("mavenRepositoryUrl", "https://ossrh-staging-api.central.sonatype.com/service/local/"),
 		nexusUsernameEnvOrProp: project.getProperties().getOrDefault("nexusUsernameEnvOrProp", "nexusUsername"),
 		nexusPasswordEnvOrProp: project.getProperties().getOrDefault("nexusPasswordEnvOrProp", "nexusPassword"),
+		nexusStagingProfileEnvOrProp: project.getProperties().getOrDefault("nexusStagingProfileEnvOrProp", "se.bjurr"),
 		signingKeyEnvOrProp: project.getProperties().getOrDefault("signingKeyEnvOrProp", "signing.keyId"),
 		signingPasswordEnvOrProp: project.getProperties().getOrDefault("signingPasswordEnvOrProp", "signing.password"),
 		// tags: a,b,c # Empty by default
@@ -265,6 +266,7 @@ nexusPublishing {
 			nexusUrl = uri(getEffectiveConfigConventionalelease().mavenRepositoryUrl)
 			username = findEnvOrPropValue(getEffectiveConfigConventionalelease().nexusUsernameEnvOrProp)
 			password = findEnvOrPropValue(getEffectiveConfigConventionalelease().nexusPasswordEnvOrProp)
+			stagingProfileId = findEnvOrPropValue(getEffectiveConfigConventionalelease().nexusStagingProfileEnvOrProp)
 		}
 	}
 }
