--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ bin
 .settings
 .gradle
 build
+examples/*/gradle
+examples/*/gradlew
+examples/*/gradlew.bat
+examples/*/.gradle
+examples/*/build
+.idea
