--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,4 @@
-#
-#Mon Aug 11 20:33:11 CEST 2025
-adjustExistingGradlePluginPlugins=true
-description=Release Java or Gradle Plugin projects with conventional versioning.
+#Fri Sep 12 17:19:11 CEST 2025
+description=Gradle Conventions.
 group=se.bjurr.gradle
-publishGradlePluginToGradlePortal=false
-repoType=GRADLE
-version=0.11.1
+version=1.0.0
