fix: trying to fix release script

--- a/build.gradle
+++ b/build.gradle
@@ -48,3 +48,13 @@ apply from: "src/main/groovy/se.bjurr.gradle.publish-java.gradle"
 apply from: "src/main/groovy/se.bjurr.gradle.release.gradle"
 
 
+tasks.register('postRelease', GradleBuild) {
+	tasks = [
+		"publish",
+		"closeAndReleaseStagingRepositories"
+	]
+}
+
+tasks.named("release") {
+    finalizedBy("postRelease")
+}
