--- a/build.gradle
+++ b/build.gradle
@@ -48,13 +48,15 @@ apply from: "src/main/groovy/se.bjurr.gradle.publish-java.gradle"
 apply from: "src/main/groovy/se.bjurr.gradle.release.gradle"
 
 
-tasks.register('postRelease', GradleBuild) {
+tasks.named("release") {
 	tasks = [
+		'clean',
+		'gitChangelogSemanticVersion',
+		'commitNewVersionTask',
+		"publishToMavenLocal",
+		'gitChangelog',
+		'commitChangelogTask',
 		"publish",
 		"closeAndReleaseStagingRepositories"
 	]
-}
-
-tasks.named("release") {
-    finalizedBy("postRelease")
 }
