--- a/src/main/groovy/se.bjurr.gradle.bundle-jar-shadow.gradle
+++ b/src/main/groovy/se.bjurr.gradle.bundle-jar-shadow.gradle
@@ -6,6 +6,7 @@ plugins {
 	id "se.bjurr.gradle.formatting" apply false
 	id "se.bjurr.gradle.update-versions"
 	id "se.bjurr.gradle.release"
+	id "se.bjurr.gradle.sign" apply false
 	id "se.bjurr.gradle.violations-readme"
 }
 
@@ -15,6 +16,7 @@ allprojects {
 	apply plugin: "se.bjurr.gradle.pom"
 	apply plugin: "se.bjurr.gradle.static-code-analysis"
 	apply plugin: "se.bjurr.gradle.formatting"
+	apply plugin: "se.bjurr.gradle.sign"
 }
 
 releaseExtension {
