chore(release): 1.0.2 [GRADLE SCRIPT]

--- a/src/main/groovy/se.bjurr.gradle.release.gradle
+++ b/src/main/groovy/se.bjurr.gradle.release.gradle
@@ -78,6 +78,12 @@ plugins.withId("io.github.gradle-nexus.publish-plugin") {
 /**
  * Release process
  */
+tasks.register('updateVersion', GradleBuild) {
+	tasks = ['gitChangelogSemanticVersion',
+				'commitNewVersionTask',
+			]
+}
+
 tasks.register('release', GradleBuild) {
 	tasks = ['clean']
 
