chore(release): Updating changelog with 1.0.2 [GRADLE SCRIPT]

--- a/src/main/groovy/se.bjurr.gradle.release.gradle
+++ b/src/main/groovy/se.bjurr.gradle.release.gradle
@@ -79,9 +79,10 @@ plugins.withId("io.github.gradle-nexus.publish-plugin") {
  * Release process
  */
 tasks.register('updateVersion', GradleBuild) {
-	tasks = ['gitChangelogSemanticVersion',
-				'commitNewVersionTask',
-			]
+	tasks = [
+		'gitChangelogSemanticVersion',
+		'commitNewVersionTask',
+	]
 }
 
 tasks.register('release', GradleBuild) {
