--- a/src/main/groovy/se.bjurr.gradle.java.gradle
+++ b/src/main/groovy/se.bjurr.gradle.java.gradle
@@ -2,20 +2,14 @@ import org.gradle.api.model.ObjectFactory
 import org.gradle.api.provider.Property
 
 class JavaExtension {
-	final Property<String> sourceCompatibility
-	final Property<String> targetCompatibility
 	final ListProperty<String> generatedSourceFolders
 	final ListProperty<String> extraTestSourceFolders
 
 	JavaExtension(ObjectFactory objects) {
-		sourceCompatibility = objects.property(String)
-		targetCompatibility = objects.property(String)
 		generatedSourceFolders = objects.listProperty(String)
 		extraTestSourceFolders = objects.listProperty(String)
 
 		// Set defaults
-		sourceCompatibility.convention("17")
-		targetCompatibility.convention("17")
 		generatedSourceFolders.convention([
 			"generatedSourceFolders",
 			"src/gen/java,src/generated/java"
@@ -41,8 +35,8 @@ repositories {
 
 plugins.withType(JavaPlugin) {
 	tasks.withType(JavaCompile).configureEach {
-		sourceCompatibility = project.extensions.javaExtension.sourceCompatibility.getOrElse(JavaVersion.VERSION_17)
-		targetCompatibility = project.extensions.javaExtension.targetCompatibility.getOrElse(JavaVersion.VERSION_17)
+		sourceCompatibility = JavaVersion.VERSION_11
+		targetCompatibility = JavaVersion.VERSION_11
 	}
 
 	project.extensions.javaExtension.generatedSourceFolders
@@ -98,8 +92,6 @@ tasks.withType(JavaCompile) {
 	options.warnings = false
 	options.compilerArgs << "-parameters"
 	options.encoding = "UTF-8"
-	sourceCompatibility = project.extensions.javaExtension.sourceCompatibility.get()
-	targetCompatibility = project.extensions.javaExtension.targetCompatibility.get()
 }
 
 allprojects {
