--- a/examples/command-shadow/build.gradle
+++ b/examples/command-shadow/build.gradle
@@ -2,6 +2,11 @@ plugins {
 	id "se.bjurr.gradle.bundle-command-shadow" version "latest-SNAPSHOT"
 }
 
+java {
+	sourceCompatibility = JavaVersion.VERSION_11
+	targetCompatibility = JavaVersion.VERSION_11
+}
+
 dependencies {
 	implementation 'com.google.code.gson:gson:2.13.1'
 }
