--- a/src/main/groovy/se.bjurr.gradle.java.gradle
+++ b/src/main/groovy/se.bjurr.gradle.java.gradle
@@ -4,10 +4,12 @@ import org.gradle.api.provider.Property
 class JavaExtension {
 	final ListProperty<String> generatedSourceFolders
 	final ListProperty<String> extraTestSourceFolders
+	final Property<Integer> javaVersion
 
 	JavaExtension(ObjectFactory objects) {
 		generatedSourceFolders = objects.listProperty(String)
 		extraTestSourceFolders = objects.listProperty(String)
+		javaVersion = objects.property(Integer)
 
 		// Set defaults
 		generatedSourceFolders.convention([
@@ -18,6 +20,7 @@ class JavaExtension {
 			"extraTestSourceFolders",
 			"src/test/generated"
 		])
+		javaVersion.convention(11)
 	}
 }
 
@@ -34,11 +37,6 @@ repositories {
 }
 
 plugins.withType(JavaPlugin) {
-	tasks.withType(JavaCompile).configureEach {
-		sourceCompatibility = JavaVersion.VERSION_11
-		targetCompatibility = JavaVersion.VERSION_11
-	}
-
 	project.extensions.javaExtension.generatedSourceFolders
 			.map {
 				it.collect { folder ->
@@ -104,5 +102,21 @@ jar {
 	manifest {
 		attributes 'name': project.name
 		attributes 'Automatic-Module-Name': project.group + "." + project.name
+	}
+}
+
+afterEvaluate {
+	def version = project.extensions.javaExtension.javaVersion.get()
+
+	java {
+		toolchain {
+			languageVersion = JavaLanguageVersion.of(version)
+		}
+		sourceCompatibility = JavaVersion.toVersion(version)
+		targetCompatibility = JavaVersion.toVersion(version)
+	}
+
+	tasks.withType(JavaCompile).configureEach {
+		options.release = version
 	}
 }
