chore: update examples with java version

--- a/examples/gradle-precompiled-script-plugin/build.gradle
+++ b/examples/gradle-precompiled-script-plugin/build.gradle
@@ -3,5 +3,6 @@ plugins {
 	id "se.bjurr.gradle.bundle-jar" version "latest-SNAPSHOT"
 }
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+javaExtension {
+	javaVersion = 11
+}
