--- a/examples/multiproject/build.gradle
+++ b/examples/multiproject/build.gradle
@@ -2,8 +2,9 @@ plugins {
 	id "se.bjurr.gradle.bundle-jar-shadow" version "latest-SNAPSHOT"
 }
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+javaExtension {
+	javaVersion = 11
+}
 
 project("project1", {
 	staticCodeAnalysisExtension {
