--- a/examples/command-gr8/build.gradle
+++ b/examples/command-gr8/build.gradle
@@ -2,8 +2,9 @@ plugins {
 	id "se.bjurr.gradle.bundle-command-gr8" version "latest-SNAPSHOT"
 }
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+javaExtension {
+	javaVersion = 11
+}
 
 dependencies {
 	implementation 'com.google.code.gson:gson:2.13.1'
