--- a/examples/command-shadow/build.gradle
+++ b/examples/command-shadow/build.gradle
@@ -2,9 +2,8 @@ plugins {
 	id "se.bjurr.gradle.bundle-command-shadow" version "latest-SNAPSHOT"
 }
 
-java {
-	sourceCompatibility = JavaVersion.VERSION_11
-	targetCompatibility = JavaVersion.VERSION_11
+javaExtension {
+	javaVersion = 11
 }
 
 dependencies {
