--- a/examples/jar-gr8/build.gradle
+++ b/examples/jar-gr8/build.gradle
@@ -2,11 +2,8 @@ plugins {
 	id "se.bjurr.gradle.bundle-jar-gr8" version "latest-SNAPSHOT"
 }
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
-
-dependencies {
-	implementation 'com.google.code.gson:gson:2.13.1'
+javaExtension {
+	javaVersion = 11
 }
 
 gr8Extension {
@@ -15,4 +12,8 @@ gr8Extension {
 
 staticCodeAnalysisExtension {
 	maxViolations.set(1)
+}
+
+dependencies {
+	implementation 'com.google.code.gson:gson:2.13.1'
 }
