--- a/examples/jar/build.gradle
+++ b/examples/jar/build.gradle
@@ -2,13 +2,14 @@ plugins {
 	id "se.bjurr.gradle.bundle-jar" version "latest-SNAPSHOT"
 }
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
-
-dependencies {
-	implementation 'com.google.code.gson:gson:2.13.1'
+javaExtension {
+	javaVersion = 11
 }
 
 staticCodeAnalysisExtension {
 	maxViolations.set(1)
+}
+
+dependencies {
+	implementation 'com.google.code.gson:gson:2.13.1'
 }
