feat: look for deps in gradlePluginPortal

--- a/src/main/groovy/se.bjurr.gradle.java.gradle
+++ b/src/main/groovy/se.bjurr.gradle.java.gradle
@@ -34,6 +34,7 @@ project.plugins.apply 'groovy'
 repositories {
 	mavenLocal()
 	mavenCentral()
+	gradlePluginPortal()
 }
 
 plugins.withType(JavaPlugin) {
