fix: include the Automatic-Module-Name and name

--- a/src/main/groovy/se.bjurr.gradle.gr8.gradle
+++ b/src/main/groovy/se.bjurr.gradle.gr8.gradle
@@ -83,6 +83,8 @@ tasks.register("proguardWithManifest", Jar) {
 
 		manifest {
 			attributes("Main-Class": mainClassProp.get())
+			attributes 'name': project.name
+			attributes 'Automatic-Module-Name': project.group + "." + project.name
 		}
 
 		from {
