--- a/src/main/groovy/se.bjurr.gradle.java.gradle
+++ b/src/main/groovy/se.bjurr.gradle.java.gradle
@@ -14,7 +14,8 @@ class JavaExtension {
 		// Set defaults
 		generatedSourceFolders.convention([
 			"generatedSourceFolders",
-			"src/gen/java,src/generated/java"
+			"src/gen/java",
+			"src/generated/java"
 		])
 		extraTestSourceFolders.convention([
 			"extraTestSourceFolders",
