--- a/src/main/groovy/se.bjurr.gradle.npm-java-runner.gradle
+++ b/src/main/groovy/se.bjurr.gradle.npm-java-runner.gradle
@@ -23,9 +23,12 @@ project.extensions.create('npmJavaRunnerExtension', NpmJavaRunnerExtension, proj
 project.plugins.apply 'maven-publish'
 
 task publishNpm() {
-	doLast {
-		runCommand(['npm', 'publish'])
-	}
+	def pushAllTagsResult = new ProcessBuilder('npm', 'publish')
+			.directory(project.projectDir)
+			.inheritIO()
+			.start()
+			.waitFor()
+	logger.lifecycle("NPM exit code: ${pushAllTagsResult}")
 }
 
 task setupNpmJavaRunnerFiles() {
@@ -74,24 +77,4 @@ def shouldGitIgnore(filename) {
 		throw new RuntimeException("The .gitignore should include '${filename}'")
 	}
 	logger.lifecycle("${filename} is ignored")
-}
-
-def runCommand(args, int attempts = 5) {
-	logger.lifecycle("Executing ${args.join(' ')}")
-	def stdout = new ByteArrayOutputStream()
-	try {
-		exec {
-			commandLine args
-			standardOutput = stdout
-		}
-		return stdout.toString().trim()
-	} catch (e) {
-		def err = stdout.toString().trim() + "\n" + "Command: ${args.join(' ')} failed with ${e.getMessage()}" + "\n" + "Trying ${attempts} more times"
-		logger.lifecycle(err)
-		if (attempts == 0) {
-			throw new RuntimeException(err, e)
-		}
-		sleep(5 * 1000)
-		return runCommand(args, attempts - 1)
-	}
 }
