--- a/src/main/groovy/se.bjurr.gradle.shadow.gradle
+++ b/src/main/groovy/se.bjurr.gradle.shadow.gradle
@@ -1,5 +1,7 @@
 import org.gradle.api.model.ObjectFactory
 import org.gradle.api.provider.Property
+import org.gradle.api.tasks.bundling.Jar
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
 class ShadowExtension {
 	final Property<String> relocate
@@ -14,7 +16,6 @@ class ShadowExtension {
 		mainClass = objects.property(String)
 		jarResourcesFolder = objects.property(String)
 
-		// Set defaults
 		relocate.convention("")
 		jarResourcesFolder.convention("src/jar/resources")
 	}
@@ -26,14 +27,15 @@ project.plugins.apply 'com.gradleup.shadow'
 project.plugins.apply 'java-library'
 project.plugins.apply 'maven-publish'
 
-
-tasks.named("jar", Jar).configure { jarTask ->
+tasks.named('jar') { Jar jarTask ->
 	def mainClassValue = project.extensions.shadowExtension.mainClass.orNull
 	if (mainClassValue) {
 		jarTask.manifest {
-			attributes('Main-Class': mainClassValue)
-			attributes 'name': project.name
-			attributes 'Automatic-Module-Name': project.group + "." + project.name
+			attributes(
+					'Main-Class': mainClassValue,
+					'name': project.name,
+					'Automatic-Module-Name': "${project.group}.${project.name}"
+					)
 		}
 	}
 
@@ -50,41 +52,7 @@ java {
 	withJavadocJar()
 }
 
-publishing {
-	publications {
-		mavenJava(MavenPublication) { publication ->
-			logger.lifecycle("shadow jar in maven publication")
-			artifacts.clear()
-			artifact(tasks.named("shadowJar")) {
-				classifier = null
-			}
-			artifact(tasks.javadocJar)
-			artifact(tasks.sourcesJar)
-
-			logger.lifecycle("group: ${project.group} name: ${project.name}")
-			groupId project.group.replaceAll("[\"']","")
-			artifactId project.name.replaceAll("[\"']","")
-			version version
-
-			versionMapping {
-				allVariants {
-					fromResolutionResult()
-				}
-			}
-		}
-	}
-}
-
-plugins.withId("java") {
-	configurations.named("runtimeElements") {
-		outgoing.artifact(tasks.shadowJar)
-	}
-	configurations.named("apiElements") {
-		outgoing.artifact(tasks.shadowJar)
-	}
-}
-
-tasks.named('shadowJar') { shadowJarTask ->
+tasks.named('shadowJar') { ShadowJar shadowJarTask ->
 	shadowJarTask.archiveBaseName.set(project.name)
 	shadowJarTask.archiveVersion.set(project.version)
 	shadowJarTask.archiveClassifier.set('')
@@ -98,22 +66,44 @@ tasks.named('shadowJar') { shadowJarTask ->
 		}
 
 		project.extensions.shadowExtension.relocate.get().tokenize(',').each { relocation ->
-			if (relocation.isEmpty()) return
-
+			if (!relocation) return
 				def (relocateFrom, relocateTo) = relocation.contains(":")
 						? relocation.split(":") as List
 						: [
 							relocation,
-							(project.group + "." + project.name + "." + relocation)
-							.replaceAll("[^a-zA-Z.]", "")
+							"${project.group}.${project.name}.${relocation}".replaceAll("[^a-zA-Z.]", "")
 						]
-
 			logger.lifecycle("Relocating ${relocateFrom} to ${relocateTo}")
 			shadowJarTask.relocate(relocateFrom, relocateTo)
 		}
 	}
 }
 
-tasks.named("build") {
-	dependsOn(tasks.named("shadowJar"))
+publishing {
+	publications {
+		mavenJava(MavenPublication) { pub ->
+			logger.lifecycle("shadow jar in maven publication")
+			artifacts.clear()
+			artifact(tasks.named("shadowJar")) { classifier = null }
+			artifact(tasks.named("javadocJar"))
+			artifact(tasks.named("sourcesJar"))
+
+			groupId project.group.toString().replaceAll("[\"']", "")
+			artifactId project.name.replaceAll("[\"']", "")
+			version project.version
+
+			versionMapping {
+				allVariants {
+					fromResolutionResult()
+				}
+			}
+		}
+	}
 }
+
+plugins.withId("java") {
+	configurations.named("runtimeElements") { it.outgoing.artifact(tasks.named("shadowJar")) }
+	configurations.named("apiElements") { it.outgoing.artifact(tasks.named("shadowJar")) }
+}
+
+tasks.named("build") { it.dependsOn(tasks.named("shadowJar")) }
