--- a/src/main/groovy/se.bjurr.gradle.formatting.gradle
+++ b/src/main/groovy/se.bjurr.gradle.formatting.gradle
@@ -24,22 +24,24 @@ project.plugins.apply 'java-library'
 
 processResources.dependsOn spotlessApply
 
-spotless {
-	java {
-		target '**/*.java'
-		googleJavaFormat()
-		targetExclude { project.extensions.formatting.formattingExcludedPatterns.get() }
-	}
-	groovyGradle {
-		target '*.gradle', 'src/main/**/*.gradle'
-		targetExclude { project.extensions.formatting.formattingExcludedPatterns.get() }
-		greclipse()
-	}
-	json {
-		target '*.json', 'src/main/**/*.json', 'src/test/**/*.json'
-		gson()
-				.indentWithSpaces(2)
-				.version('2.8.1')
+afterEvaluate {
+	spotless {
+		java {
+			target '**/*.java'
+			googleJavaFormat()
+			targetExclude project.extensions.formatting.formattingExcludedPatterns.get()
+		}
+		groovyGradle {
+			target '*.gradle', 'src/main/**/*.gradle'
+			targetExclude project.extensions.formatting.formattingExcludedPatterns.get()
+			greclipse()
+		}
+		json {
+			target '*.json', 'src/main/**/*.json', 'src/test/**/*.json'
+			gson()
+					.indentWithSpaces(2)
+					.version('2.8.1')
+		}
 	}
 }
 
