feat: log releasing tasks

--- a/src/main/groovy/se.bjurr.gradle.release.gradle
+++ b/src/main/groovy/se.bjurr.gradle.release.gradle
@@ -96,6 +96,7 @@ tasks.register('release', GradleBuild) {
 		}
 
 		tasks += project.extensions.releaseExtension.releasePostTasks.get()
+		logger.lifecycle("Releasing with tasks: ${tasks}")
 	}
 }
 
