--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #
-#Tue Oct 07 21:17:20 CEST 2025
+#Tue Oct 28 07:14:47 CET 2025
 description=Gradle Conventions.
 group=se.bjurr.gradle
-version=1.4.1
+version=1.4.2
