--- a/src/main/groovy/se.bjurr.gradle.sign.gradle
+++ b/src/main/groovy/se.bjurr.gradle.sign.gradle
@@ -24,26 +24,28 @@ project.extensions.create('signExtension', SignExtension, project.objects)
 project.plugins.apply 'signing'
 
 signing {
-	// Providers for signing key and password
-	def signingKeyProvider = project.providers
-			.environmentVariable(project.extensions.signExtension.signingKeyEnvOrProp)
-			.orElse(project.provider { project.findProperty(project.extensions.signExtension.signingKeyEnvOrProp.get()) })
-	def signingPasswordProvider = project.providers
-			.environmentVariable(project.extensions.signExtension.signingPasswordEnvOrProp)
-			.orElse(project.provider { project.findProperty(project.extensions.signExtension.signingPasswordEnvOrProp.get()) })
 
-	// Only required if credentials exist and we're releasing
 	required {
-		signingKeyProvider.present && signingPasswordProvider.present &&
-				gradle.taskGraph.hasTask("closeAndReleaseStagingRepositories")
+		gradle.taskGraph.hasTask("closeAndReleaseStagingRepositories")
 	}
 
-	// Configure in-memory PGP keys if available
-	if (signingKeyProvider.present && signingPasswordProvider.present) {
-		logger.lifecycle("Configuring signing key and password")
-		useInMemoryPgpKeys(signingKeyProvider.get(), signingPasswordProvider.get())
-	} else {
-		logger.lifecycle("Not configuring signing key and password")
+	project.afterEvaluate {
+		def signingKeyProvider = project.extensions.signExtension.signingKeyEnvOrProp.flatMap { name ->
+			project.providers.environmentVariable(name)
+				.orElse(project.provider { project.findProperty(name) as String })
+		}
+		def signingPasswordProvider = project.extensions.signExtension.signingPasswordEnvOrProp.flatMap { name ->
+			project.providers.environmentVariable(name)
+				.orElse(project.provider { project.findProperty(name) as String })
+		}
+		signing {
+			if (signingKeyProvider.present && signingPasswordProvider.present) {
+				logger.lifecycle("Configuring signing key and password")
+				useInMemoryPgpKeys(signingKeyProvider.get(), signingPasswordProvider.get())
+			} else {
+				logger.lifecycle("Not configuring signing key and password")
+			}
+		}
 	}
 
 	sign(publishing.publications)
