--- a/src/main/groovy/se.bjurr.gradle.sign.gradle
+++ b/src/main/groovy/se.bjurr.gradle.sign.gradle
@@ -30,14 +30,24 @@ signing {
 	}
 
 	project.afterEvaluate {
-		def signingKeyProvider = project.extensions.signExtension.signingKeyEnvOrProp.flatMap { name ->
-			project.providers.environmentVariable(name)
-				.orElse(project.provider { project.findProperty(name) as String })
+		def getEnvOrProp = { name ->
+			def value = project.providers.environmentVariable(name)
+			if (value.present) {
+				logger.lifecycle("Using ${name} from environment variable")
+				return value
+			}
+			value = project.provider { project.findProperty(name) as String }
+			if (value.present) {
+				logger.lifecycle("Using ${name} from property")
+				return value
+			} else {
+				logger.lifecycle("No ${name} found")
+			}
+			return value
 		}
-		def signingPasswordProvider = project.extensions.signExtension.signingPasswordEnvOrProp.flatMap { name ->
-			project.providers.environmentVariable(name)
-				.orElse(project.provider { project.findProperty(name) as String })
-		}
+
+		def signingKeyProvider = getEnvOrProp(project.extensions.signExtension.signingKeyEnvOrProp.get())
+		def signingPasswordProvider = getEnvOrProp(project.extensions.signExtension.signingPasswordEnvOrProp.get())
 		signing {
 			if (signingKeyProvider.present && signingPasswordProvider.present) {
 				logger.lifecycle("Configuring signing key and password")
@@ -47,7 +57,6 @@ signing {
 			}
 		}
 	}
-
 	sign(publishing.publications)
 }
 
