feat: junit and more automation in pom

--- a/src/main/groovy/se.bjurr.gradle.java.gradle
+++ b/src/main/groovy/se.bjurr.gradle.java.gradle
@@ -98,6 +98,10 @@ allprojects {
 	tasks.withType(Javadoc) {
 		options.addStringOption('Xdoclint:none', '-quiet')
 	}
+
+	tasks.withType(Test).configureEach {
+		useJUnitPlatform()
+	}
 }
 
 jar {
